--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
  </head>
  <body>
   <h1> Odin Recipes</h1>
+  
+  <h2> <a href="recipes/chicken.html">Unbelievable Chicken</a> </h2>
+  <p> The unusual combination of easy ingredients in this marinade for chicken is fabulous!
+  Everyone who tastes it asks me to share the recipe. You will love it and the many compliments you 
+ get - I promise <p>
+  
  </body>
 </html>
 
