Feat: Add Description image and link in Chicken.html

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -6,5 +6,45 @@
  </head>
  <body>
  <h1>Unbelievable Chicken Recipe<h1>
+ <img src="./chicken.jpg" alt="Image of delicious Grilled chicken marinated with garlic and onions along garlic pasta with beans">
+ <h2> A amazing recipe with great versatility, amazing choice for a date or maybe a dinner with your family.</h2>
+ <p> A recipe that mix simplicity with ingredients and spices handpicked for the best results.This chicken's recipe
+ as the name suggest have a unbelievable taste that will make who eats you asks if you really made it or ordered from 
+ a Michelin Star Restaurant</p>
+ <p> So don't wait too much and let's start this great recipe, take note that this recipe needs to marinate for 8 hours in 
+ your fridge therefore don't leave unitl the last minute to start. Get ready and check if you have everything in kitchen
+ and let's make this great dish together</p>
+  
+ <h2>Ingredients:</h2>
+
+ <ul>
+  <li>1/4 cup cider vinegar</li>
+  <li>3 tablespoons prepared coarse-ground mustard or to taste</li>
+  <li>3 cloves garlic, peeled and minced</li>
+  <li>1 lime, juiced</li>
+  <li>1/2 lemon, juiced</li>
+  <li>1/2 cup brown sugar or to taste</li>
+  <li>1 1/2 teaspoons salt or to taste</li>
+  <li>ground black pepper to taste</li>
+  <li>6 tablespoons olive oil</li>
+  <li>6 skinless, boneless chicken breast halves</li> 
+ </ul>
+ 
+ <h2>Steps</h2>
+  <dl>
+   <dt>Step 1</dt>
+    <dd>Mix cider vinegar, mustard, garlic, lime juice, lemon juice, brown sugar, salt, and pepper together
+    in a large glass or ceramic bowl. Whisk in olive oil. Add chicken and toss evenly to coat.
+    Cover, and marinate in the refrigerator for 8 hours to overnight.</dd>
+   <dt>Step 2</dt>
+    <dd>Preheat an outdoor grill for high heat.</dd>
+   <dt>Step 3</dt>
+    <dd>Lightly oil the grill grate. Place chicken on the preheated grill, and cook 6 to 8 minutes per side,
+    until juices run clear. Discard any remaining marinade.</dd>
+
+
+     
+ 
+ <a href="../index.html">Home</a>
  </body>
 </html>
