--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <h1> Odin Recipes</h1>
   
   <h2> <a href="recipes/chicken.html">Unbelievable Chicken</a> </h2>
-  <img src="recipes/chicken.jpg">
-  <p> The unusual combination of easy ingredients in this marinade for chicken is fabulous!
+  <img src="recipes/chicken.jpg" alt="Image of delicious Grilled chicken marinated with garlic and onions along garlic pasta with beans">
+  <p>" The unusual combination of easy ingredients in this marinade for chicken is fabulous!
   Everyone who tastes it asks me to share the recipe. You will love it and the many compliments you 
- get - I promise <p>
-  
- </body>
+ get - I promise" <p>
+  <h2> <a href="recipes/shrimp.html">Shrimp Stir Fry</a> </h2>
+  <img src="recipes/shrimp.jpg">
+  <p> Quick and easy weeknight meal when you want to eat sea food. In less than 30 minutes and simple as
+ it can get.</p>  
+</body>
 </html>
 
 
