Fix:Typo Shrimp Feat:Casserole page

--- a/recipes/shrimp.html
+++ b/recipes/shrimp.html
@@ -1,4 +1,4 @@
- GNU nano 6.2                                                 chicken.html                                                           
+                                                         
 <!DOCTYPE html>
 <html lang="en">
  <head>
@@ -12,7 +12,7 @@
  <p> This shrimp stir fry recipe with frozen vegetables, frozen shrimp, and a simple stir fry sauce
  -comes together in less than 30 minutes for a quick and easy dinner! Can be serve with rice or with noodles, and enjoy.</p>
  <p> If you are a sea food lover or just want a quick and delicous meal, this one is the one for you.
-  You don't need to think much when it comes to praticity and flavor. Check out the list of ingredients below and let's cook:"</p>
+  You don't need to think much when it comes to praticity and flavor. Check out the list of ingredients below and let's cook:</p>
 
  <h2>Ingredients:</h2>
 
