Fix: Typo in Index Feat:Add links to other recipes

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -41,9 +41,12 @@
  </dl>
 
 
+ <h2> See other Recipes: </h2>
 
-
-
+<ul>
+<li> <a href="./chicken.html">Unbelievable Chicken</a></li>
+<li> <a href="./shrimp.html"> Shrimp Stir Fry</a></li>
+</ul>
  <a href="../index.html">Home</a>
  </body>
 </html>
