--- a/recipes/shrimp.html
+++ b/recipes/shrimp.html
@@ -40,10 +40,12 @@
     are coated and sauce is thickened, about 5 minutes more.</dd>
   </dl>
  
+ <h2> See other Recipes: </h2>
 
-
-
-
+<ul>
+<li> <a href="./chicken.html">Unbelievable Chicken</a></li>
+<li> <a href="./casserole.html">Chicken Parmesan Casserole Recipe </a></li>
+</ul>
  <a href="../index.html">Home</a>
  </body>
 </html>
