--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   Everyone who tastes it asks me to share the recipe. You will love it and the many compliments you 
  get - I promise" <p>
   <h2> <a href="recipes/shrimp.html">Shrimp Stir Fry</a> </h2>
-  <img src="recipes/shrim.jpg"alt="6 Delicous shrimps seasoned with black pepper served with vegetables and rice">
+  <img src="recipes/shrimp.jpg"alt="6 Delicous shrimps seasoned with black pepper served with vegetables and rice">
   <p> Quick and easy weeknight meal when you want to eat sea food. In less than 30 minutes and simple as
  it can get.</p>  
   <h2> <a href="recipes/casserole.html">Chicken Parmesan Casserole Recipe</a> </h2>
