--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -42,9 +42,13 @@
     <dd>Lightly oil the grill grate. Place chicken on the preheated grill, and cook 6 to 8 minutes per side,
     until juices run clear. Discard any remaining marinade.</dd>
 
+<h2>See other Recipes:</h2>
 
-     
- 
+<ul>
+<li> <a href="./casserole.html">Chicken Parmesan Casserole Recipe</a> </li>
+<li> <a href="./shrimp.html"> Shrimp Stir Fry</a> </li>
+</ul>
+
  <a href="../index.html">Home</a>
  </body>
 </html>
