--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
  <head>
   <meta charset="UTF-8">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="style.css">
  </head>
  <body>
-  <h1> Odin Recipes</h1>
-  
-  <h2> <a href="recipes/chicken.html">Unbelievable Chicken</a> </h2>
-  <img src="recipes/chicken.jpg" alt="Image of delicious Grilled chicken marinated with garlic and onions along garlic pasta with beans">
-  <p>" The unusual combination of easy ingredients in this marinade for chicken is fabulous!
+<div >
+    <h1> Odin Recipes</h1>
+    <h2> <a href="recipes/chicken.html">Unbelievable Chicken</a> </h2>
+    <img src="recipes/chicken.jpg" alt="Image of delicious Grilled
+   chicken marinated with garlic and onions along garlic pasta with beans">
+    <p>"The unusual combination of  easy ingredients in this marinade for chicken is fabulous!
   Everyone who tastes it asks me to share the recipe. You will love it and the many compliments you 
- get - I promise" <p>
-  <h2> <a href="recipes/shrimp.html">Shrimp Stir Fry</a> </h2>
-  <img src="recipes/shrimp.jpg"alt="6 Delicous shrimps seasoned with black pepper served with vegetables and rice">
-  <p> Quick and easy weeknight meal when you want to eat sea food. In less than 30 minutes and simple as
- it can get.</p>  
-  <h2> <a href="recipes/casserole.html">Chicken Parmesan Casserole Recipe</a> </h2>
-  <img src="recipes/casserole.jpg"alt="Chicken casserole with parmesan cheese and crispy bread crumbs served by a wood spoon">
-  <p>If you love your grandmama's food this recipe is the choice</p>
- </body>
+ get - I promise" </p>
+    <h2> <a href="recipes/shrimp.html">Shrimp Stir Fry</a> </h2>
+    <img src="recipes/shrimp.jpg"alt="6 Delicious shrimps seasoned with black 
+  pepper served with vegetables and rice">
+     <p> "The perfect weeknight seafood meal — quick, easy, and ready in less than 30 minutes!"</p>  
+     <h2> <a href="recipes/casserole.html">Chicken Parmesan Casserole Recipe</a> </h2>
+     <img src="recipes/casserole.jpg"alt="Chicken casserole with parmesan cheese a
+  nd crispy bread crumbs served by a wood spoon">
+     <p>"If you love your grandma's food, this recipe is the perfect choice for you."</p>
+</div>
+
+</body>
+
 </html>
 
 
