Add Styles to recipes and fix Styles in Index

--- a/recipes/casserole.html
+++ b/recipes/casserole.html
@@ -3,8 +3,10 @@
  <head>
   <meta charset="UTF-8">
   <title>Chicken Parmesan Casserole</title>
+   <link rel="stylesheet" href="style.css">
  </head>
  <body>
+ <div>
  <h1>Chicken Parmesan Casserole Recipe<h1>
  <img src="./casserole.jpg" alt="A Delicious chicken parmesan casserole with marinara sause and cryspy bread crumbs">
  <h2> If you love your grandmama's food you will love this recipe</h2>
@@ -43,12 +45,15 @@
 
  <h2> See other Recipes: </h2>
 
-<ul>
+<ul class="other-recipes">
 <li> <a href="./chicken.html">Unbelievable Chicken</a></li>
 <li> <a href="./shrimp.html"> Shrimp Stir Fry</a></li>
 </ul>
  <a href="../index.html">Home</a>
- </body>
+</div>
+
+</body>
+
 </html>
 
 
