--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -3,8 +3,10 @@
  <head>
   <meta charset="UTF-8">
   <title>Unbelievable Chicken</title>
+   <link rel="stylesheet" href="style.css">
  </head>
  <body>
+ <div>  
  <h1>Unbelievable Chicken Recipe<h1>
  <img src="./chicken.jpg" alt="Image of delicious Grilled chicken marinated with garlic and onions along garlic pasta with beans">
  <h2> A amazing recipe with great versatility, amazing choice for a date or maybe a dinner with your family.</h2>
@@ -41,14 +43,18 @@
    <dt>Step 3</dt>
     <dd>Lightly oil the grill grate. Place chicken on the preheated grill, and cook 6 to 8 minutes per side,
     until juices run clear. Discard any remaining marinade.</dd>
-
+  </dl>
 <h2>See other Recipes:</h2>
 
-<ul>
+<ul class="other-recipes">
 <li> <a href="./casserole.html">Chicken Parmesan Casserole Recipe</a> </li>
 <li> <a href="./shrimp.html"> Shrimp Stir Fry</a> </li>
 </ul>
 
  <a href="../index.html">Home</a>
- </body>
+</div>
+
+
+
+</body>
 </html>
